<resources>
    <string name="app_name">Todos_LAZARENKO</string>
    <string name="name">Todos</string>
    <string name="new_todo">New Todo</string>
    <string name="title_title">Title:</string>
    <string name="title_input_original">Title</string>
    <string name="text_tite">Text:</string>
    <string name="contents">Contents</string>
    <string name="checkBox_Text">Completed</string>
    <string name="upload_img_btn_text">Upload Image</string>
    <string name="save_btn_text">Save</string>
    <string name="due_date_title">Due date:</string>
    <string name="ex_date">mm/dd/yy</string>
    <string name="format_date">%02d/%02d/%4d</string>
    <string name="delete_btn">Delete</string>
    <string name="due_by_title">Due by:</string>
    <string name="delete_dialog">Are you sure you want to delete this ToDo?</string>
    <string name="cancel">Cancel</string>
    <string name="all_tab_title">All</string>
    <string name="active_tab_title">Active</string>
    <string name="completed_tab_title">Completed</string>
    <string name="channel_name">TodosNotificationChannel</string>
    <string name="channel_description">Notify the user of an image download being done</string>
</resources>
